add proxy_prefix to all 302 redirects to support heroku differing ports

--- a/nginx.conf
+++ b/nginx.conf
@@ -116,7 +116,7 @@ http {
                 return 404;
             }
             # if it exists, send appropriate redirection
-            return 302 /main/$dest_referrerhost$request_uri;
+            return 302 $proxy_prefix/main/$dest_referrerhost$request_uri;
         }
 
 
@@ -155,7 +155,7 @@ http {
             }
             # redirect any url with /main/google.com to /main/https://google.com
             location ~^/main(/[^/_]+_)?(?!(/[^/_]+_)?/(http|ws)s?://|//)/(?<rewrite_url_with_scheme>.*) {
-                return 302 /main$1/$relativescheme://$rewrite_url_with_scheme;
+                return 302 $proxy_prefix/main$1/$relativescheme://$rewrite_url_with_scheme;
             }
             # handle websocket connections
             location ~^/main/\d*ws_/(?<targeturl>.+){
@@ -182,7 +182,7 @@ http {
             }
             # redirect any url with /main/unsupportedmod_/blahblah to /main/blahblah
             location ~^/main/[^_/]+_/(?<redirecttargeturl>.+) {
-                return 302 /main/$redirecttargeturl;
+                return 302 $proxy_prefix/main/$redirecttargeturl;
             }
             location ~^/main/(?<targeturl>.*)$ {
                 # blacklist urls
