use proxy_prefix for proxy_redirect to avoid the port problem

--- a/nginx.conf
+++ b/nginx.conf
@@ -191,7 +191,7 @@ http {
                 }
 
                 # handle proxy sending redirection requests
-                proxy_redirect ~^(https?://.+) /main/$1;
+                proxy_redirect ~^(https?://.+) $proxy_prefix/main/$1;
 
                 sub_filter_once off;
                 # sub_filter_types text/html; already text/html by default but leaving it here for clarity
