enable support for embedding in iframe

--- a/nginx.conf
+++ b/nginx.conf
@@ -131,6 +131,8 @@ http {
             proxy_set_header Accept-Encoding 'identity;q=1, *;q=0';
             # prevent proxied servers' HSTS headers from affecting the client
             proxy_hide_header Strict-Transport-Security;
+            # enable support for embedding proxy site in an iframe
+            proxy_hide_header X-Frame-Options;
             # rewrite referer header
             proxy_set_header Referer $rewrite_referer;
             # rewrite origin header
