change folder to maek development easier

--- a/nginx.conf
+++ b/nginx.conf
@@ -99,7 +99,7 @@ http {
 
         # serve static files, disallow access to .git directories, and ignore prefixes starting with /main/
         location ~^((?!/\.git|^/main/).)*$ {
-            alias /home/binary/public$uri;
+            alias /home/binary/womginx/public$uri;
             # if no file is found, pass it to @referrer-handler
         }
         location = / {
