increase client_max_body_size to 100M

--- a/nginx.conf
+++ b/nginx.conf
@@ -150,6 +150,8 @@ http {
             proxy_busy_buffers_size 24k;
             # numOfBuffers * bufferSize >= proxy_buffer_size
             proxy_buffers 4 16k; 
+            # client can only upload files less than 100M
+            client_max_body_size 100M;
 
             # rewrite relative urls like /main/// to /main/https:// internally without redirect
             location ~^/main(/[^_/]+_)?///(?<protocol_relative_url>.+) {
