add default bot user agent blacklist to deter crawlers

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,11 +30,23 @@ http {
         default 0;
         'www.example.com' 1;
     }
+    # blacklist user agents
+    # the following is a default list that simply blocks all bots. credit to https://stackoverflow.com/a/24820722
+    map $http_user_agent $blacklist_useragent {
+        default 0;
+        ~*(google|bing|yandex|msnbot) 1;
+        ~*(AltaVista|Googlebot|Slurp|BlackWidow|Bot|ChinaClaw|Custo|DISCo|Download|Demon|eCatch|EirGrabber|EmailSiphon|EmailWolf|SuperHTTP|Surfbot|WebWhacker) 1;
+        ~*(Express|WebPictures|ExtractorPro|EyeNetIE|FlashGet|GetRight|GetWeb!|Go!Zilla|Go-Ahead-Got-It|GrabNet|Grafula|HMView|Go!Zilla|Go-Ahead-Got-It) 1;
+        ~*(rafula|HMView|HTTrack|Stripper|Sucker|Indy|InterGET|Ninja|JetCar|Spider|larbin|LeechFTP|Downloader|tool|Navroad|NearSite|NetAnts|tAkeOut|WWWOFFLE) 1;
+        ~*(GrabNet|NetSpider|Vampire|NetZIP|Octopus|Offline|PageGrabber|Foto|pavuk|pcBrowser|RealDownload|ReGet|SiteSnagger|SmartDownload|SuperBot|WebSpider) 1;
+        ~*(Teleport|VoidEYE|Collector|WebAuto|WebCopier|WebFetch|WebGo|WebLeacher|WebReaper|WebSauger|eXtractor|Quester|WebStripper|WebZIP|Wget|Widow|Zeus) 1;
+        ~*(Twengabot|htmlparser|libwww|Python|perl|urllib|scan|Curl|email|PycURL|Pyth|PyQ|WebCollector|WebCopy|webcraw) 1;
+    }
     # set scheme appropriately in case nginx is sitting behind servers like heroku
     map $http_x_forwarded_proto $relativescheme {
         default $http_x_forwarded_proto;
         '' $scheme;
-    }
+    } 
 
     # websocket headers
     map $http_upgrade $connection_upgrade {
@@ -192,6 +204,10 @@ http {
                 # blacklist urls
                 if ($blacklist) {
                     return 403 'Sorry. The owner of this proxy decided to disallow access to this content.';
+                }
+                # blacklist user agents
+                if ($blacklist_useragent) {
+                    return 403 'Sorry, you are not allowed to access this content.';
                 }
 
                 # handle proxy sending redirection requests
