add check for womginx session cookie add support for including other server blocks

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,7 @@ events {
 
 http {
     include /etc/nginx/mime.types;
+    include /etc/nginx/conf.d/*; # add any additional/custom server blocks
 
     resolver 1.1.1.1;
     # resolver 1.1.1.3; # <-- uncomment this and comment out the above to block malware and adult sites
@@ -46,7 +47,11 @@ http {
     map $http_x_forwarded_proto $relativescheme {
         default $http_x_forwarded_proto;
         '' $scheme;
-    } 
+    }
+    # set cookie only if / or /index.html
+    map $uri $do_set_womginx_cookie {
+        '/index.html' 'womginx_are_you_a_bot=no; HttpOnly';
+    }
 
     # websocket headers
     map $http_upgrade $connection_upgrade {
@@ -111,6 +116,7 @@ http {
 
         # serve static files, disallow access to .git directories, and ignore prefixes starting with /main/
         location ~^((?!/\.git|^/main/).)*$ {
+            add_header 'Set-Cookie' $do_set_womginx_cookie;
             alias /home/binary/womginx/public$uri;
             # if no file is found, pass it to @referrer-handler
         }
@@ -208,6 +214,10 @@ http {
                 # blacklist user agents
                 if ($blacklist_useragent) {
                     return 403 'Sorry, you are not allowed to access this content.';
+                }
+                # deny access to anyone without the special cookie
+                if ($cookie_womginx_are_you_a_bot != 'no') {
+                    return 403;
                 }
 
                 # handle proxy sending redirection requests
