--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,7 @@ events {
 http {
     include /etc/nginx/mime.types;
     include /etc/nginx/conf.d/*; # add any additional/custom server blocks
+    map_hash_bucket_size 128;
 
     resolver 1.1.1.1;
     # resolver 1.1.1.3; # <-- uncomment this and comment out the above to block malware and adult sites
@@ -18,7 +19,7 @@ http {
     client_body_timeout 10s;
     client_header_timeout 10s;
     proxy_connect_timeout 20s;
-    # these are very lenient limtis. there should be no reason why a
+    # these are very lenient limits. there should be no reason why a
     # client will request 60 requests per second for a straight 8.33 seconds
     limit_req_zone $binary_remote_addr zone=limitreq:20m rate=30r/s;
     limit_req zone=limitreq burst=500 nodelay;
@@ -67,9 +68,11 @@ http {
         default '';
         ~^https?://([^/]+) $1;
     }
+    # remove origin header from websocket url request: wss://dest:12/blah?somestuff?womginx_ws_origin_header=https://example.com
     # convert wss://domain.com to https://domain.com
     map $targeturl $dest_fullwebsocketurl {
         default $targeturl;
+        ~^ws(s)?:\/\/(.+)(\?womginx_ws_origin_header=.+)$ http$1://$2;
         ~^ws(s)?://(.+) http$1://$2;
     }
     # get targeturl destination from referrer
@@ -87,9 +90,14 @@ http {
         default $http_referer;
         ~^https?://[^/]+/main(/[^_/]+_)?/(?<targeturl>.*) $targeturl;
     }
-    map $http_origin $rewrite_origin {
+    # rewrite origin header with destination host. if that doesn't exist, don't rewrite it
+    # also, get origin header from websocket request, prioritizing over $http_origin if that exists (see $dest_fullwebsocketurl)
+    map $http_origin:womginxseparate:$request_uri $rewrite_origin {
         default $dest_hostwithscheme;
-        '' '';
+        # origin maybe exists, womginx_ws_origin_header exists
+        ~^.+(\?womginx_ws_origin_header=(.+))$ $2;
+        # origin and womginx_ws_origin_header doesn't exist
+        ~^:womginxseparate: '';
     }
     server {
         server_name womginx.synricha.org;
@@ -162,6 +170,7 @@ http {
             # websocket headers
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Sec-WebSocket-Protocol $http_sec_websocket_protocol;
             # fix "upstream sent too big header/body"
             proxy_buffer_size 16k;
             # proxy_buffer_size + 8k
