update demo link

--- a/nginx.conf
+++ b/nginx.conf
@@ -100,12 +100,12 @@ http {
         ~^:womginxseparate: '';
     }
     server {
-        server_name womginx.synricha.org;
+        server_name womginx.arph.org;
 
         listen 80;
         listen 443 ssl;
-        ssl_certificate /etc/letsencrypt/live/womginx.synricha.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/womginx.synricha.org/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/womginx.arph.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/womginx.arph.org/privkey.pem;
 
         merge_slashes off;
         proxy_ssl_server_name on;
