hide 403 from the user (fixes #9 along with many other issue duplicates)

--- a/nginx.conf
+++ b/nginx.conf
@@ -49,10 +49,6 @@ http {
         default $http_x_forwarded_proto;
         '' $scheme;
     }
-    # set cookie only if / or /index.html
-    map $uri $do_set_womginx_cookie {
-        '/index.html' 'womginx_are_you_a_bot=no; HttpOnly';
-    }
 
     # websocket headers
     map $http_upgrade $connection_upgrade {
@@ -119,12 +115,22 @@ http {
         # convert /main/http://domain.com?a to /main/http://domain.com/?a
         rewrite ^(/main/https?://[^/?]*)/?(.*) $1/$2;
 
+        set $womginx_cookie 'womginx_are_you_a_bot=no; Path=/; HttpOnly';
+        
+        # Seemlessly add womginx cookie to improve user experience. Cookies sometimes get unset by
+        # the proxy site server so it is confusing when the 403 error pops up. Also, going to / to set cookie
+        # wouldn't necessarily work since the browser caches the page but doesn't actually set the required cookie.
+        # example url: /womginxaddcookie/timestamp_for_cache_busting/https://womginxserver/main/https://www.google.com 
+        location ~^/womginxaddcookie/\d+/(.+) {
+            add_header Set-Cookie $womginx_cookie;
+            return 302 $1;
+        }
 
         #### static file requests handling ####
 
         # serve static files, disallow access to .git directories, and ignore prefixes starting with /main/
         location ~^((?!/\.git|^/main/).)*$ {
-            add_header 'Set-Cookie' $do_set_womginx_cookie;
+            add_header 'Set-Cookie' $womginx_cookie;
             alias /home/binary/womginx/public$uri;
             # if no file is found, pass it to @referrer-handler
         }
@@ -132,7 +138,7 @@ http {
             if ($dest_referrerhost = '') {
                 rewrite ^ /index.html last;
             }
-            # if referrer is valid, pass it to @referrer-handler
+            # if no file exists, pass it to @referrer-handler
             return 404;
         }
         # catch links like '/assets.png' and redirect them by their referrer if referrer is valid
@@ -223,9 +229,10 @@ http {
                 if ($blacklist_useragent) {
                     return 403 'Sorry, you are not allowed to access this content.';
                 }
-                # deny access to anyone without the special cookie
+                # deny access to anyone without the special cookie, but redirect them appropriately to set it
                 if ($cookie_womginx_are_you_a_bot != 'no') {
-                    return 403;
+                    add_header Content-Type text/html always;
+                    return 403 '<script>location.href="/womginxaddcookie/"+Date.now()+"/"+location.href</script>';
                 }
 
                 # handle proxy sending redirection requests
