add support for undouble-slashed urls

--- a/nginx.conf
+++ b/nginx.conf
@@ -189,6 +189,12 @@ http {
             location ~^/main(/[^_/]+_)?///(?<protocol_relative_url>.+) {
                 rewrite ^/main(/[^_/]+_)?///(?<protocol_relative_url>.+) /main$1/$relativescheme://$protocol_relative_url last;
             }
+            # rewrite undouble-slashed urls like /main/http:/google.com to /main/http://google.com internally without redirect
+            # because some services like repl.it force-merge double slashes
+            # (this is handled together with wombat-handler.js)
+            location ~^\/main(?<mod>\/[^\/_]+_)?(?<url_preslash>\/(?:http|ws)s?:\/)(?<url_postslash>[^\/].*) {
+                rewrite ^ /main$mod$url_preslash/$url_postslash last;
+            }
             # redirect any url with /main/google.com to /main/https://google.com
             location ~^/main(/[^/_]+_)?(?!(/[^/_]+_)?/(http|ws)s?://|//)/(?<rewrite_url_with_scheme>.*) {
                 return 302 $proxy_prefix/main$1/$relativescheme://$rewrite_url_with_scheme;
