fix undouble slash support

--- a/nginx.conf
+++ b/nginx.conf
@@ -111,6 +111,12 @@ http {
         # not apply to child locations
         # use undecoded uri as location for proxying encoded urls
         rewrite ^ $request_uri;
+
+        # convert /main/http:/google.com to /main/http://google.com internally without redirect
+        # because some services like repl.it force-merge double slashes
+        # (this is handled together with wombat-handler.js)
+        rewrite ^\/main(?<mod>\/[^\/_]+_)?(?<url_preslash>\/(?:http|ws)s?:\/)(?<url_postslash>[^\/].*) /main$mod$url_preslash/$url_postslash;
+
         # convert /main/http://domain.com to /main/http://domain.com/
         # convert /main/http://domain.com?a to /main/http://domain.com/?a
         rewrite ^(/main/https?://[^/?]*)/?(.*) $1/$2;
@@ -188,12 +194,6 @@ http {
             # rewrite relative urls like /main/// to /main/https:// internally without redirect
             location ~^/main(/[^_/]+_)?///(?<protocol_relative_url>.+) {
                 rewrite ^/main(/[^_/]+_)?///(?<protocol_relative_url>.+) /main$1/$relativescheme://$protocol_relative_url last;
-            }
-            # rewrite undouble-slashed urls like /main/http:/google.com to /main/http://google.com internally without redirect
-            # because some services like repl.it force-merge double slashes
-            # (this is handled together with wombat-handler.js)
-            location ~^\/main(?<mod>\/[^\/_]+_)?(?<url_preslash>\/(?:http|ws)s?:\/)(?<url_postslash>[^\/].*) {
-                rewrite ^ /main$mod$url_preslash/$url_postslash last;
             }
             # redirect any url with /main/google.com to /main/https://google.com
             location ~^/main(/[^/_]+_)?(?!(/[^/_]+_)?/(http|ws)s?://|//)/(?<rewrite_url_with_scheme>.*) {
