fix undouble slash support again

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
     limit_req zone=limitreq burst=500 nodelay;
     limit_req_status 429;
     limit_conn_zone $binary_remote_addr zone=limitconn:20m;
-    limit_conn limitconn 30;
+    limit_conn limitconn 50;
 
     # domain blacklist. blacklisting www.example.com as an example
     map $dest_host $blacklist {
@@ -74,12 +74,12 @@ http {
     # get targeturl destination from referrer
     map $http_referer $dest_referrerhost {
         default '';
-        ~^https?://[^/]+/main(/[^_/]+_)?/(?<targeturl>https?://[^/]+) $targeturl;
+        ~^https?://[^/]+/main(/[^_/]+_)?/(?<targeturl>https?://?[^/]+) $targeturl;
     }
     # use $request_uri for proxy cookie rewriting where there is no $targeturl variable
     map $request_uri $dest_hostwithscheme {
         default '';
-        ~^/main(/[^_/]+_)?/(https?://[^/]+) $2;
+        ~^/main(/[^_/]+_)?/(https?://?[^/]+) $2;
     }
     # header rewrites
     map $http_referer $rewrite_referer {
