fix undouble slash support for websockets

--- a/nginx.conf
+++ b/nginx.conf
@@ -68,7 +68,7 @@ http {
     # convert wss://domain.com to https://domain.com
     map $targeturl $dest_fullwebsocketurl {
         default $targeturl;
-        ~^ws(s)?:\/\/(.+)(\?womginx_ws_origin_header=.+)$ http$1://$2;
+        ~^ws(s)?://(.+)(\?womginx_ws_origin_header=.+)$ http$1://$2;
         ~^ws(s)?://(.+) http$1://$2;
     }
     # get targeturl destination from referrer
@@ -94,6 +94,12 @@ http {
         ~^.+(\?womginx_ws_origin_header=(.+))$ $2;
         # origin and womginx_ws_origin_header doesn't exist
         ~^:womginxseparate: '';
+    }
+    # womginx_ws_origin_header contain merged slashes from wombat-handler.js to avoid the middle server closing
+    # the websocket connection because of the need to merge it. this is to undo that
+    map $rewrite_origin $reslashed_origin {
+        default $rewrite_origin;
+        ~^(https?:/)([^/].*) $1/$2;
     }
     server {
         server_name womginx.arph.org;
@@ -174,7 +180,7 @@ http {
             # rewrite referer header
             proxy_set_header Referer $rewrite_referer;
             # rewrite origin header
-            proxy_set_header Origin $rewrite_origin;
+            proxy_set_header Origin $reslashed_origin;
             # rewrite cookie domain and path
             proxy_cookie_domain ~(.*) $host;
             # rewrite cookie path
