--- a/nginx_template.conf
+++ b/nginx_template.conf
@@ -12,8 +12,7 @@ http {
     include /etc/nginx/conf.d/*; # add any additional/custom server blocks
     map_hash_bucket_size 128;
 
-    resolver 1.1.1.1;
-    # resolver 1.1.1.3; # <-- uncomment this and comment out the above to block malware and adult sites
+    resolver 1.1.1.1;  # if SAFE_BROWSING is defined in .env this will be switched to 1.1.1.3 to block malware and adult sites
 
     # ddos protection
     client_body_timeout 10s;
@@ -102,12 +101,11 @@ http {
         ~^(https?:/)([^/].*) $1/$2;
     }
     server {
-        server_name womginx.arph.org;
+        server_name ${SERVER_NAME};
 
-        listen 80;
-        listen 443 ssl;
-        ssl_certificate /etc/letsencrypt/live/womginx.arph.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/womginx.arph.org/privkey.pem;
+        listen ${PORT} ${SSL};
+        ssl_certificate /etc/letsencrypt/live/${CERT_NAME}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${CERT_NAME}/privkey.pem;
 
         merge_slashes off;
         proxy_ssl_server_name on;
