Fix .env file typo; bump wombat to latest working version

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SERVER_NAME=womginx.arph.org
 
-# Set SSL to nothing if behind a reverse proxy, if ssl is none then CERTN_NAME doesn't do anything.
+# Set SSL to nothing if behind a reverse proxy, if ssl is none then CERT_NAME doesn't do anything.
 # Set SSL to "ssl" if you want to use ssl
 SSL=
 CERT_NAME=
